--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -20,7 +20,7 @@
             </div>
             <div class="column">
                 <h1 class="animatednombre ">Edwin Arlex Bustamante Osorio</h1>
-                <h2 class="animated">Desarollador Junior Full-Stack</h2>
+                <h2 class="animated">Desarrollador Junior Full-Stack</h2>
             </div>
 
 
