--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,19 +5,19 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse p-3" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item" routerLinkActive="active">
+        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+                <li class="nav-item p-2" routerLinkActive="active">
                     <a class="nav-link nav-link-hover" [routerLink]="['certificado']" aria-current="page"><strong>Certificados</strong></a>
                 </li>
-                <li class="nav-item" routerLinkActivate="active">
+                <li class="nav-item p-2" routerLinkActivate="active">
                     <a class="nav-link nav-link-hover" [routerLink]="['contacto']"><strong>Contacto</strong></a>
                 </li>
-                <li class="nav-item" routerLinkActivate="active">
+                <li class="nav-item p-2" routerLinkActivate="active">
                     <a class="nav-link nav-link-hover" [routerLink]="['proyectos']"><strong>Proyectos</strong></a>
                 </li>
 
-                <li class="nav-item" routerLinkActivate="active">
+                <li class="nav-item p-2" routerLinkActivate="active">
                     <a class="nav-link nav-link-hover" [routerLink]="['lenguajes']"><strong>Lenguajes</strong></a>
                 </li>
 
