--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-xl navbar-light fixed-top mb-0">
     <div class="container-fluid">
-        <a class="nav-link nav-link-hover" href="#"><strong><img src="../../../assets/imagenes/edwin.jpeg" ></strong></a>
+        <a class="nav-link nav-link-hover" href="#"><strong><img src="../../../assets/imagenes/edwin2.jpeg" ></strong></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
