cambio de texto

--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -33,10 +33,15 @@
 
 
             <h1>Mi descripción </h1>
-            <p>Soy un apasionado desarrollador web con experiencia en el desarrollo de aplicaciones web interactivas y sitios web atractivos. Me especializo en la creación de interfaces intuitivas y experiencias de usuario excepcionales. Estoy constantemente
-                actualizado sobre las últimas tendencias en desarrollo web y me esfuerzo por mejorar continuamente mis habilidades. Además, soy un firme creyente en el trabajo en equipo y disfruto colaborar con otros profesionales para lograr resultados
-                excepcionales. Tengo un gran interés en aprender y enseñar, lo que me permite contribuir activamente en un grupo de trabajo y compartir mis conocimientos con mis compañeros. Creo en la importancia de un entorno de trabajo colaborativo
-                donde podamos aprender y crecer juntos.</p>
+            <p>
+              Soy un apasionado desarrollador web con experiencia en el desarrollo de aplicaciones interactivas y 
+              sitios atractivos. Me especializo en la creación de interfaces intuitivas y experiencias de usuario 
+              excepcionales. Estoy constantemente actualizado sobre las últimas tendencias en desarrollo web y me 
+              esfuerzo por mejorar continuamente mis habilidades. Además, soy un firme creyente en el trabajo en 
+              equipo y disfruto colaborar con otros profesionales para lograr resultados excepcionales. Tengo un
+               gran interés en aprender y enseñar, lo que me permite contribuir activamente en un grupo de trabajo
+                y compartir mis conocimientos con mis compañeros. Creo en la importancia de un entorno de trabajo 
+                colaborativo donde podamos aprender y crecer juntos."</p>
 
 
 
@@ -44,7 +49,7 @@
             <h2 class="h2section1"> Tecnólogo en Análisis y Desarrollo de Sistemas de Información del SENA </h2>
 
             <article>
-                <h3 class="h3styles"> Habilidades que desarrolle: </h3>
+                <h3 class="h3styles"> Habilidades que desarrollé: </h3>
 
                 <p>1. Analizar los requisitos del cliente para construir el sistema de información.</p>
                 <p>2. Aplicar buenas prácticas de calidad en el proceso de desarrollo de software.</p>
